# TreeSitterPlusPlus

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  tree-sitter-config.cmake.in
include/tree_sitter/: langs.h
include/tree_sitter/cxx/: api.h  cursor.h  lang.h  node.h  parser.h  point.h  query.h  tree.h
src/: cursor.cpp  lang.cpp  node.cpp  parser.cpp  query.cpp  tree.cpp
tests/: CMakeLists.txt  test_language.cpp  test_node.cpp  test_parser.cpp  test_query.cpp
